pkgs/cupertino_http/lib/src/cronet.dart


  /// The app creates an instance of Cronet_UploadDataProvider by providing custom
  /// functions for each method.
  Cronet_UploadDataProviderPtr Cronet_UploadDataProvider_CreateWith(
    Cronet_UploadDataProvider_GetLengthFunc GetLengthFunc,
    Cronet_UploadDataProvider_ReadFunc ReadFunc,
    Cronet_UploadDataProvider_RewindFunc RewindFunc,
    Cronet_UploadDataProvider_CloseFunc CloseFunc,
  ) {
    return _Cronet_UploadDataProvider_CreateWith(
      GetLengthFunc,
      ReadFunc,
      RewindFunc,
      CloseFunc,
    );
  }

  late final _Cronet_UploadDataProvider_CreateWithPtr = _lookup<
          ffi.NativeFunction<
              Cronet_UploadDataProviderPtr Function(
                  Cronet_UploadDataProvider_GetLengthFunc,
                  Cronet_UploadDataProvider_ReadFunc,
                  Cronet_UploadDataProvider_RewindFunc,
                  Cronet_UploadDataProvider_CloseFunc)>>(
      'Cronet_UploadDataProvider_CreateWith');
  late final _Cronet_UploadDataProvider_CreateWith =
      _Cronet_UploadDataProvider_CreateWithPtr.asFunction<
          Cronet_UploadDataProviderPtr Function(
              Cronet_UploadDataProvider_GetLengthFunc,
              Cronet_UploadDataProvider_ReadFunc,
              Cronet_UploadDataProvider_RewindFunc,
              Cronet_UploadDataProvider_CloseFunc)>();

  /// Create an instance of Cronet_UrlRequest.
  Cronet_UrlRequestPtr Cronet_UrlRequest_Create() {
    return _Cronet_UrlRequest_Create();
  }

  late final _Cronet_UrlRequest_CreatePtr =
      _lookup<ffi.NativeFunction<Cronet_UrlRequestPtr Function()>>(
          'Cronet_UrlRequest_Create');
  late final _Cronet_UrlRequest_Create = _Cronet_UrlRequest_CreatePtr
      .asFunction<Cronet_UrlRequestPtr Function()>();

  /// Destroy an instance of Cronet_UrlRequest.
  void Cronet_UrlRequest_Destroy(
    Cronet_UrlRequestPtr self,
  ) {
    return _Cronet_UrlRequest_Destroy(
      self,
    );
  }

  late final _Cronet_UrlRequest_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_UrlRequestPtr)>>(
          'Cronet_UrlRequest_Destroy');
  late final _Cronet_UrlRequest_Destroy = _Cronet_UrlRequest_DestroyPtr
      .asFunction<void Function(Cronet_UrlRequestPtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_UrlRequest_SetClientContext(
    Cronet_UrlRequestPtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_UrlRequest_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_UrlRequest_SetClientContextPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_UrlRequestPtr,
              Cronet_ClientContext)>>('Cronet_UrlRequest_SetClientContext');
  late final _Cronet_UrlRequest_SetClientContext =
      _Cronet_UrlRequest_SetClientContextPtr.asFunction<
          void Function(Cronet_UrlRequestPtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_UrlRequest_GetClientContext(
    Cronet_UrlRequestPtr self,
  ) {
    return _Cronet_UrlRequest_GetClientContext(
      self,
    );
  }

  late final _Cronet_UrlRequest_GetClientContextPtr = _lookup<
          ffi
          .NativeFunction<Cronet_ClientContext Function(Cronet_UrlRequestPtr)>>(
      'Cronet_UrlRequest_GetClientContext');
  late final _Cronet_UrlRequest_GetClientContext =
      _Cronet_UrlRequest_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(Cronet_UrlRequestPtr)>();

  /// Concrete methods of Cronet_UrlRequest implemented by Cronet.
  /// The app calls them to manipulate Cronet_UrlRequest.
  int Cronet_UrlRequest_InitWithParams(
    Cronet_UrlRequestPtr self,
    Cronet_EnginePtr engine,
    Cronet_String url,
    Cronet_UrlRequestParamsPtr params,
    Cronet_UrlRequestCallbackPtr callback,
    Cronet_ExecutorPtr executor,
  ) {
    return _Cronet_UrlRequest_InitWithParams(
      self,
      engine,
      url,
      params,
      callback,
      executor,
    );
  }

  late final _Cronet_UrlRequest_InitWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              Cronet_UrlRequestPtr,
              Cronet_EnginePtr,
              Cronet_String,
              Cronet_UrlRequestParamsPtr,
              Cronet_UrlRequestCallbackPtr,
              Cronet_ExecutorPtr)>>('Cronet_UrlRequest_InitWithParams');
  late final _Cronet_UrlRequest_InitWithParams =
      _Cronet_UrlRequest_InitWithParamsPtr.asFunction<
          int Function(
              Cronet_UrlRequestPtr,
              Cronet_EnginePtr,
              Cronet_String,
              Cronet_UrlRequestParamsPtr,
              Cronet_UrlRequestCallbackPtr,
              Cronet_ExecutorPtr)>();

  int Cronet_UrlRequest_Start(
    Cronet_UrlRequestPtr self,
  ) {
    return _Cronet_UrlRequest_Start(
      self,
    );
  }

  late final _Cronet_UrlRequest_StartPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Cronet_UrlRequestPtr)>>(
          'Cronet_UrlRequest_Start');
  late final _Cronet_UrlRequest_Start = _Cronet_UrlRequest_StartPtr.asFunction<
      int Function(Cronet_UrlRequestPtr)>();

  int Cronet_UrlRequest_FollowRedirect(
    Cronet_UrlRequestPtr self,
  ) {
    return _Cronet_UrlRequest_FollowRedirect(
      self,
    );
  }

  late final _Cronet_UrlRequest_FollowRedirectPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(Cronet_UrlRequestPtr)>>(
          'Cronet_UrlRequest_FollowRedirect');
  late final _Cronet_UrlRequest_FollowRedirect =
      _Cronet_UrlRequest_FollowRedirectPtr.asFunction<
          int Function(Cronet_UrlRequestPtr)>();

  int Cronet_UrlRequest_Read(
    Cronet_UrlRequestPtr self,
    Cronet_BufferPtr buffer,
  ) {
    return _Cronet_UrlRequest_Read(
      self,
      buffer,
    );
  }

  late final _Cronet_UrlRequest_ReadPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(Cronet_UrlRequestPtr,
              Cronet_BufferPtr)>>('Cronet_UrlRequest_Read');
  late final _Cronet_UrlRequest_Read = _Cronet_UrlRequest_ReadPtr.asFunction<
      int Function(Cronet_UrlRequestPtr, Cronet_BufferPtr)>();

  void Cronet_UrlRequest_Cancel(
    Cronet_UrlRequestPtr self,
  ) {
    return _Cronet_UrlRequest_Cancel(
      self,
    );
  }

  late final _Cronet_UrlRequest_CancelPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_UrlRequestPtr)>>(
          'Cronet_UrlRequest_Cancel');
  late final _Cronet_UrlRequest_Cancel = _Cronet_UrlRequest_CancelPtr
      .asFunction<void Function(Cronet_UrlRequestPtr)>();

  bool Cronet_UrlRequest_IsDone(
    Cronet_UrlRequestPtr self,
  ) {
    return _Cronet_UrlRequest_IsDone(
      self,
    );
  }

  late final _Cronet_UrlRequest_IsDonePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Cronet_UrlRequestPtr)>>(
          'Cronet_UrlRequest_IsDone');
  late final _Cronet_UrlRequest_IsDone = _Cronet_UrlRequest_IsDonePtr
      .asFunction<bool Function(Cronet_UrlRequestPtr)>();

  void Cronet_UrlRequest_GetStatus(
    Cronet_UrlRequestPtr self,
    Cronet_UrlRequestStatusListenerPtr listener,
  ) {
    return _Cronet_UrlRequest_GetStatus(
      self,
      listener,
    );
  }

  late final _Cronet_UrlRequest_GetStatusPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(
                  Cronet_UrlRequestPtr, Cronet_UrlRequestStatusListenerPtr)>>(
      'Cronet_UrlRequest_GetStatus');
  late final _Cronet_UrlRequest_GetStatus =
      _Cronet_UrlRequest_GetStatusPtr.asFunction<
          void Function(
              Cronet_UrlRequestPtr, Cronet_UrlRequestStatusListenerPtr)>();

  /// Concrete interface Cronet_UrlRequest is implemented by Cronet.
  /// The app can use this for testing / mocking.
  Cronet_UrlRequestPtr Cronet_UrlRequest_CreateWith(
    Cronet_UrlRequest_InitWithParamsFunc InitWithParamsFunc,
    Cronet_UrlRequest_StartFunc StartFunc,
    Cronet_UrlRequest_FollowRedirectFunc FollowRedirectFunc,
    Cronet_UrlRequest_ReadFunc ReadFunc,
    Cronet_UrlRequest_CancelFunc CancelFunc,
    Cronet_UrlRequest_IsDoneFunc IsDoneFunc,
    Cronet_UrlRequest_GetStatusFunc GetStatusFunc,
  ) {
    return _Cronet_UrlRequest_CreateWith(
      InitWithParamsFunc,
      StartFunc,
      FollowRedirectFunc,
      ReadFunc,
      CancelFunc,
      IsDoneFunc,
      GetStatusFunc,
    );
  }

  late final _Cronet_UrlRequest_CreateWithPtr = _lookup<
          ffi.NativeFunction<
              Cronet_UrlRequestPtr Function(
                  Cronet_UrlRequest_InitWithParamsFunc,
                  Cronet_UrlRequest_StartFunc,
                  Cronet_UrlRequest_FollowRedirectFunc,
                  Cronet_UrlRequest_ReadFunc,
                  Cronet_UrlRequest_CancelFunc,
                  Cronet_UrlRequest_IsDoneFunc,
                  Cronet_UrlRequest_GetStatusFunc)>>(
      'Cronet_UrlRequest_CreateWith');
  late final _Cronet_UrlRequest_CreateWith =
      _Cronet_UrlRequest_CreateWithPtr.asFunction<
          Cronet_UrlRequestPtr Function(
              Cronet_UrlRequest_InitWithParamsFunc,
              Cronet_UrlRequest_StartFunc,
              Cronet_UrlRequest_FollowRedirectFunc,
              Cronet_UrlRequest_ReadFunc,
              Cronet_UrlRequest_CancelFunc,
              Cronet_UrlRequest_IsDoneFunc,
              Cronet_UrlRequest_GetStatusFunc)>();

  /// Destroy an instance of Cronet_RequestFinishedInfoListener.
  void Cronet_RequestFinishedInfoListener_Destroy(
    Cronet_RequestFinishedInfoListenerPtr self,
  ) {
    return _Cronet_RequestFinishedInfoListener_Destroy(
      self,
    );
  }

  late final _Cronet_RequestFinishedInfoListener_DestroyPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(Cronet_RequestFinishedInfoListenerPtr)>>(
      'Cronet_RequestFinishedInfoListener_Destroy');
  late final _Cronet_RequestFinishedInfoListener_Destroy =
      _Cronet_RequestFinishedInfoListener_DestroyPtr.asFunction<
          void Function(Cronet_RequestFinishedInfoListenerPtr)>();

  /// Set and get app-specific Cronet_ClientContext.
  void Cronet_RequestFinishedInfoListener_SetClientContext(
    Cronet_RequestFinishedInfoListenerPtr self,
    Cronet_ClientContext client_context,
  ) {
    return _Cronet_RequestFinishedInfoListener_SetClientContext(
      self,
      client_context,
    );
  }

  late final _Cronet_RequestFinishedInfoListener_SetClientContextPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(Cronet_RequestFinishedInfoListenerPtr,
                  Cronet_ClientContext)>>(
      'Cronet_RequestFinishedInfoListener_SetClientContext');
  late final _Cronet_RequestFinishedInfoListener_SetClientContext =
      _Cronet_RequestFinishedInfoListener_SetClientContextPtr.asFunction<
          void Function(
              Cronet_RequestFinishedInfoListenerPtr, Cronet_ClientContext)>();

  Cronet_ClientContext Cronet_RequestFinishedInfoListener_GetClientContext(
    Cronet_RequestFinishedInfoListenerPtr self,
  ) {
    return _Cronet_RequestFinishedInfoListener_GetClientContext(
      self,
    );
  }

  late final _Cronet_RequestFinishedInfoListener_GetClientContextPtr = _lookup<
          ffi.NativeFunction<
              Cronet_ClientContext Function(
                  Cronet_RequestFinishedInfoListenerPtr)>>(
      'Cronet_RequestFinishedInfoListener_GetClientContext');
  late final _Cronet_RequestFinishedInfoListener_GetClientContext =
      _Cronet_RequestFinishedInfoListener_GetClientContextPtr.asFunction<
          Cronet_ClientContext Function(
              Cronet_RequestFinishedInfoListenerPtr)>();
